Добавлена поддержка первых пяти запросов