@@ -1,15 +1,10 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:1.23-alpine AS builder
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
+COPY src  /app/
+RUN go mod download
+RUN go build -o service main.go
 
-EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
-
+FROM alpine:3.19.1
+COPY --from=builder /app/service /app/service
+ENTRYPOINT ["/app/service"]
